(executables
    (names arid)
    (modes js byte)
    (preprocess
        (pps
            js_of_ocaml-ppx
            lwt_ppx
            ocsigen-i18n
            -- --prefix Arid_ --suffix _i18n --default-module Arid_i18n
        )
    )
    (js_of_ocaml
        (build_runtime_flags :standard --enable use-js-string)
        (flags :standard --enable with-js-error --enable use-js-string
               --no-source-map)) ; source maps are slow...
    (libraries eliom.client))

(include dune.client)
